--- a/packages/SystemUI/res/values/komodo_strings.xml
+++ b/packages/SystemUI/res/values/komodo_strings.xml
@@ -108,4 +108,6 @@
     <string name="heads_up_snooze_message_one_minute"><xliff:g id="string">%s</xliff:g> - Peeking notification are snoozing for 1 minute.</string>
     <string name="heads_up_snooze_message"><xliff:g id="string">%s</xliff:g> - Peeking notifications are snoozing for <xliff:g id="number">%d</xliff:g> minutes.</string>
 
+    <!-- Screenrecord UI -->
+    <string name="screenrecord_stopdot_label">Show stop dot</string>
 </resources>
